Update title and header to 'Foothill Card Grading'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Serventes Slab Grading</title>
+  <title>Foothill Card Grading</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap" rel="stylesheet">
@@ -63,7 +63,7 @@
 <body>
 
 <header class="hero">
-  <h1>Serventes Slab Grading</h1>
+  <h1>Foothill Card Grading</h1>
   <p class="lead">Professional card grading with transparent scoring, modern authentication, and secure slab encapsulation. Built for collectors who actually care.</p>
   <a class="cta" href="#services">View Services</a>
 </header>
