--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="flex justify-between items-center h-16">
                 <!-- Logo/Brand -->
                 <a href="#" class="text-2xl font-extrabold tracking-tight text-fhcg-dark">
-                    <span class="text-fhcg-red">Foothill</span> Card Grading
+                    <span class="text-fhcg-red">Nano</span> Card Grading
                 </a>
                 <!-- Nav Links (hidden on mobile, visible on desktop) -->
                 <div class="hidden sm:ml-6 sm:flex sm:space-x-8">
@@ -56,7 +56,7 @@
     <header id="about" class="pt-16 pb-24 bg-gray-50/50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
             <h1 class="text-6xl font-extrabold tracking-tight text-fhcg-dark sm:text-7xl lg:text-8xl">
-                Precision Grading
+                Nano Precision Grading
             </h1>
             <p class="mt-4 text-xl text-gray-600 max-w-3xl mx-auto">
                 We are Nano Card Grading, proudly operating out of the majestic Sierra Nevada mountains, right in the heart of the Yosemite region. Our dedication to quality is as timeless as the granite peaks that surround us.
