Update color scheme in index.html

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                         sans: ['Inter', 'sans-serif'],
                     },
                     colors: {
-                        'fhcg-red': '#dc2626', // Tailwind red-600
-                        'fhcg-dark': '#1f2937', // Tailwind gray-800
+                        'fhcg-red': '#d4af37', // Gold
+                        'fhcg-dark': '#111111', // very dark grey
                     }
                 }
             }
@@ -30,7 +30,7 @@
         }
     </style>
 </head>
-<body class="bg-white text-fhcg-dark">
+<body class="bg-fhcg-dark text-white">
 
     <!-- Navigation Bar -->
     <nav class="bg-white shadow-md sticky top-0 z-10">
