Add link to Grading Process in index.html

--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
         <!-- LINKS -->
         <div class="hidden sm:flex space-x-8 text-novaBlack font-medium">
             <a href="#about" class="hover:text-novaGold transition">About</a>
+            <a href="grading-process.html" class="text-zinc-400 hover:text-white transition">
+    Grading Process</a>
             <a href="#process" class="hover:text-novaGold transition">Process</a>
             <a href="#verify" class="hover:text-novaGold transition">Verify</a>
             <a href="#pricing" class="hover:text-novaGold transition">Pricing</a>
